# Playwright-PoC-Python

./: .gitignore  Pipfile  README.md  pyproject.toml  pytest.ini
helpers/: api_helper.py  cookie_helper.py
page_objects/: barbora_checkout_page.py  barbora_front_page.py  barbora_product_page.py
page_objects/components/: barbora_age_modal.py  barbora_cart_sidebar.py  barbora_clear_cart_modal.py  barbora_login_modal.py  barbora_product_list.py
tests/: test_barbora.py  test_barbora_full_flow.py
