[tool.poetry]
name = "playwright-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
playwright = "^1.17"
pytest = "^7.1.1"
assertpy = "^1.1"
pytest-playwright = "^0.3.0"
allure-pytest = "^2.9.45"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
